--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -99,15 +99,7 @@ log.users.location      = users.txt
 ; ---------------------
 ; EMAILS
 ; ---------------------
-mail.smtp=true
-mail.host=smtp.gmail.com
-mail.smtpconfig.name=localhost
-mail.smtpconfig.auth=login
-mail.smtpconfig.username=airarena@gmail.com
-mail.smtpconfig.password=airarenaForever
-mail.smtpconfig.ssl=tls
-mail.smtpconfig.port=587
-mail.from=airarena@gmail.com
+mail.from=x3k2pr10oynew@spot101.com
 
 ;------------------------
 ; YPEX's Twitter Account
@@ -119,6 +111,23 @@ twitter.password = "madisonandfrench"
 ; Street View
 ;------------------------
 streetview.debug = 0
+
+
+; ---------------------
+; Recaptcha
+;---------------------
+
+;recaptcha.publickey = 6LfQHQwAAAAAAIAfhfREGMUyPJSMoJLfsTF8t4TP
+;recaptcha.privatekey = 6LfQHQwAAAAAAIsnkFWW8atwyS9WbVnIaEfLB3Jh
+
+;production
+recaptcha.publickey = 6LcAjwoAAAAAAPz1MFXHcbWn8_LbBCJSO6K2-EuV
+recaptcha.privatekey = 6Lf00QkAAAAAAIJXcq1jevC9JsGgJUSMcI2XCizs
+
+
+
+
+
 
 
 [STAGING : DEVELOPMENT]
@@ -146,6 +155,9 @@ google.map.key = ABQIAAAAnaiR032qG87zxZBbhGnZeBToQxMgfaPJIS1SZcCWQhU7dNXRhhT_Okr
 ;---------------------
 
 yahoo.search.key = lqgILF_V34Go.x3f1W.s._88M8rDMIfLnjunGH518mjgPbaICaXNbzvs5e8.Nqx5dyqrDw--
+
+
+
 
 
 [PRODUCTION: DEVELOPMENT]
