--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -16,17 +16,6 @@
 ; Routing Rules for SEO
 ; ---------------------
 
-;routes.search.route = "/:query/:city/:country"
-;routes.search.defaults.controller = index
-;routes.search.defaults.action = index
-;routes.search.defaults.query = ''
-;routes.search.defaults.city = ''
-;routes.search.defaults.country = ''
-
-
-
-
-
 ;routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
 ;routes.realestatebasic.defaults.controller = search
 ;routes.realestatebasic.defaults.action = jobssearch
@@ -518,4 +507,9 @@ routes.posting.reqs.postingid = "[0-9]+"
 ; See: http://redmine.ypex-def.local/wiki/ypex/Test_Web_Pages_Using_Test_Routes
 ;--------------------------------------------------------------------------------------------
 ; Testing payment gateway methods
+
+
+routes.contactformhandle.route = "/forms/:action/"
+routes.contactformhandle.defaults.controller = posting
+routes.contactformhandle.defaults.action = action
 
