add static pages

--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -16,6 +16,13 @@
 ; Routing Rules for SEO
 ; ---------------------
 
+
+; Routes for static files
+routes.staticpage.route = "/:document/"
+routes.staticpage.defaults.controller = static
+routes.staticpage.defaults.action = show
+routes.staticpage.defaults.document = ''
+
 ;routes.realestatebasic.route = "/Real Estate/:city/:state/:country/:region/:page"
 ;routes.realestatebasic.defaults.controller = search
 ;routes.realestatebasic.defaults.action = jobssearch
