add static pages

--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -18,7 +18,7 @@
 
 
 ; Routes for static files
-routes.staticpage.route = "/:document/"
+routes.staticpage.route = "/static/:document/"
 routes.staticpage.defaults.controller = static
 routes.staticpage.defaults.action = show
 routes.staticpage.defaults.document = ''
