--- a/application/config/routes/default.ini
+++ b/application/config/routes/default.ini
@@ -505,8 +505,13 @@ routes.static.defaults.document = ''
 routes.posting.route = "/posting/:postingid/"
 routes.posting.defaults.controller = posting
 routes.posting.defaults.action = index
-routes.posting.defaults.postingid = 1
-routes.posting.reqs.postingid = "[0-9]+"
+routes.posting.defaults.postingid = ''
+
+routes.inactiveposting.route = "/inactiveposting"
+routes.inactiveposting.defaults.controller = posting
+routes.inactiveposting.defaults.action = inactive
+
+
 
 ;--------------------------------------------------------------------------------------------
 ; Testing routes go below here.
