--- a/.htaccess
+++ b/.htaccess
@@ -18,4 +18,5 @@ RewriteRule ^Mehdone/([^/]+)/?$          Mehdone/$1 [L]
 #
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule !\.(pdf|php|js|ico|txt|gif|jpg|png|css|zip|tar\.gz)$ /index.php
+#RewriteRule !\.(pdf|php|js|ico|txt|gif|jpg|png|css|zip|tar\.gz)$ /index.php
+RewriteRule !\.(pdf|php|js|ico|txt|gif|jpg|png|css|zip|tar\.gz)$ /offline.html
